--- a/ChromaDB,Langchain.ipynb
+++ b/ChromaDB,Langchain.ipynb
@@ -195,7 +195,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "os.environ[\"GROQ_API_KEY\"]=\"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\""
+    "os.environ[\"GROQ_API_KEY\"]=\"your groq api key""
    ]
   },
   {
